# Copyright (c) Advanced Micro Devices, Inc., or its affiliates.
# SPDX-License-Identifier: MIT

cmake_minimum_required(VERSION 3.16)
project(composable_kernel_host)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CK_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
configure_file(${CK_ROOT}/include/ck/config.h.in ${CK_ROOT}/include/ck/config.h)

find_package(ROCM)
include(ROCMInstallTargets)
include(ROCMTest)

rocm_setup_version(VERSION 1.0)

list(APPEND CMAKE_MODULE_PATH ${CK_ROOT}/cmake)
include(Embed)
file(GLOB_RECURSE KERNEL_FILES CONFIGURE_DEPENDS
    ${CK_ROOT}/include/ck/*.hpp)

add_embed_library(ck_headers ${KERNEL_FILES} RELATIVE ${CK_ROOT}/include SANITIZE)

# Embed CK Tile headers (ck_tile/*.hpp) for FMHA RTC API
file(GLOB_RECURSE CK_TILE_KERNEL_FILES CONFIGURE_DEPENDS
    ${CK_ROOT}/include/ck_tile/*.hpp)
add_embed_library(ck_tile_headers ${CK_TILE_KERNEL_FILES} RELATIVE ${CK_ROOT}/include SANITIZE)
# Embed codegen device headers (wrapper.hpp for FMHA RTC).
# Phase 5 adds the remaining forward families' wrappers.
# Phase 6 adds the three backward-stage wrappers.
file(GLOB_RECURSE CK_CODEGEN_DEVICE_FILES CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_fwd/fmha_fwd_wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_fwd_pagedkv/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_fwd_splitkv/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_fwd_splitkv_combine/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_fwd_appendkv/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_batch_prefill/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_bwd_dot_do_o/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_bwd_dq_dk_dv/wrapper.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/ck/host/device_fmha_bwd_convert_dq/wrapper.hpp)
add_embed_library(ck_codegen_headers ${CK_CODEGEN_DEVICE_FILES} RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/include SANITIZE)

add_compile_options(-std=c++20)

# Phase 1: Public ck_rtc library. Must be declared before ck_host so
# that ck_host can link it for the fmha_rtc facade.
add_subdirectory(rtc)

# Phase 4: Autogenerated per-(arch,dtype) tile tables from fmha_arch_specs.json.
# The generator runs at configure time so the emitted .cpp files are
# part of the ck_host source set below.
set(_GENERATED_TILE_TABLES_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated_tile_tables)
set(_FMHA_ARCH_SPECS
    ${CMAKE_CURRENT_SOURCE_DIR}/../dispatcher/codegen/fmha_arch_specs.json)
find_package(Python3 COMPONENTS Interpreter QUIET)
if(Python3_FOUND AND EXISTS ${_FMHA_ARCH_SPECS})
    execute_process(
        COMMAND ${Python3_EXECUTABLE}
            ${CMAKE_CURRENT_SOURCE_DIR}/scripts/generate_cpp_tile_tables.py
            --spec ${_FMHA_ARCH_SPECS}
            --output-dir ${_GENERATED_TILE_TABLES_DIR}
        RESULT_VARIABLE _GEN_RC
        OUTPUT_VARIABLE _GEN_OUT
        ERROR_VARIABLE  _GEN_ERR)
    if(NOT _GEN_RC EQUAL 0)
        message(FATAL_ERROR "tile table generator failed:\n${_GEN_ERR}")
    endif()
    message(STATUS "Phase 4: ${_GEN_OUT}")
    file(GLOB _GENERATED_TILE_TABLE_SOURCES
         CONFIGURE_DEPENDS
         ${_GENERATED_TILE_TABLES_DIR}/*.cpp)
    # Regenerate at configure time when the JSON changes.
    set_property(DIRECTORY APPEND PROPERTY
        CMAKE_CONFIGURE_DEPENDS ${_FMHA_ARCH_SPECS}
                                ${CMAKE_CURRENT_SOURCE_DIR}/scripts/generate_cpp_tile_tables.py)
else()
    set(_GENERATED_TILE_TABLE_SOURCES "")
    message(WARNING "Phase 4: Python3 or fmha_arch_specs.json missing, tile tables not generated")
endif()

file(GLOB SOURCES CONFIGURE_DEPENDS src/*.cpp)
# TODO: Use object library
add_library(ck_host STATIC ${SOURCES} ${_GENERATED_TILE_TABLE_SOURCES})
target_link_libraries(ck_host PRIVATE ck_headers ck_tile_headers ck_codegen_headers)
# Phase 1: ck_host exposes the ck::host::fmha_rtc::compile_fwd() facade
# which needs the rtc:: wrappers and hiprtc transitively.
target_link_libraries(ck_host PUBLIC ck_rtc)

set_target_properties(ck_host PROPERTIES 
    LINKER_LANGUAGE CXX
    POSITION_INDEPENDENT_CODE ON)

target_include_directories(ck_host PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

add_executable(ck-template-driver driver/main.cpp)
target_link_libraries(ck-template-driver ck_host)

rocm_install_targets(
    TARGETS ck_host ck_headers ck_tile_headers ck_codegen_headers ck_rtc
    EXPORT ck_host_targets
    INCLUDE include
)
rocm_export_targets(
    TARGETS ck_host ck_headers ck_tile_headers ck_codegen_headers ck_rtc
    EXPORT ck_host_targets
    NAMESPACE composable_kernel::
)

if(BUILD_TESTING)
    add_subdirectory(test)
endif()

